# TallerDocker2025

./: Dockerfile  README.md  SLIDES.md  creeper.yaml  docker-compose.yaml  monitoring.yaml  ntfy.yaml  pyproject.toml
src/: creeper.py  main.py  models.py
