[project]
name = "taller-docker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "asyncmy>=0.2.10",
  "fastapi>=0.115.12",
  "motor>=3.7.1",
  "sqlalchemy>=2.0.41",
  "uvicorn>=0.34.2",
]
